template.json
{
    "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "loadBalancers_arkadium2lb_name": {
            "defaultValue": "arkadium2lb",
            "type": "String"
        },
        "publicIPAddresses_arkadium_name": {
            "defaultValue": "arkadium",
            "type": "String"
        },
        "virtualNetworks_arkadium2Vnet_name": {
            "defaultValue": "arkadium2Vnet",
            "type": "String"
        },
        "virtualMachineScaleSets_arkadium2_name": {
            "defaultValue": "arkadium2",
            "type": "String"
        },
        "networkSecurityGroups_arkadium2nsg_name": {
            "defaultValue": "arkadium2nsg",
            "type": "String"
        },
        "subnets_default_name": {
            "defaultValue": "default",
            "type": "String"
        },
        "inboundNatRules_natpool.1_name": {
            "defaultValue": "natpool.1",
            "type": "String"
        },
        "inboundNatRules_natpool.2_name": {
            "defaultValue": "natpool.2",
            "type": "String"
        },
        "securityRules_allowSSH_name": {
            "defaultValue": "allowSSH",
            "type": "String"
        },
        "securityRules_allowHTTP_name": {
            "defaultValue": "allowHTTP",
            "type": "String"
        },
        "loadBalancers_arkadium2lb_id": {
            "defaultValue": "/subscriptions/81f51f6c-80c0-4fc3-8311-1d6a0763f9c0/resourceGroups/arkadiumcom-frontend3/providers/Microsoft.Network/loadBalancers/arkadium2lb/frontendIPConfigurations/LoadBalancerFrontEnd",
            "type": "String"
        },
        "loadBalancers_arkadium2lb_id_1": {
            "defaultValue": "/subscriptions/81f51f6c-80c0-4fc3-8311-1d6a0763f9c0/resourceGroups/arkadiumcom-frontend3/providers/Microsoft.Network/loadBalancers/arkadium2lb/backendAddressPools/bepool",
            "type": "String"
        },
        "loadBalancers_arkadium2lb_id_2": {
            "defaultValue": "/subscriptions/81f51f6c-80c0-4fc3-8311-1d6a0763f9c0/resourceGroups/arkadiumcom-frontend3/providers/Microsoft.Network/loadBalancers/arkadium2lb/probes/TCP_443",
            "type": "String"
        },
        "loadBalancers_arkadium2lb_id_3": {
            "defaultValue": "/subscriptions/81f51f6c-80c0-4fc3-8311-1d6a0763f9c0/resourceGroups/arkadiumcom-frontend3/providers/Microsoft.Network/loadBalancers/arkadium2lb/frontendIPConfigurations/LoadBalancerFrontEnd",
            "type": "String"
        },
        "loadBalancers_arkadium2lb_id_4": {
            "defaultValue": "/subscriptions/81f51f6c-80c0-4fc3-8311-1d6a0763f9c0/resourceGroups/arkadiumcom-frontend3/providers/Microsoft.Network/loadBalancers/arkadium2lb/backendAddressPools/bepool",
            "type": "String"
        },
        "loadBalancers_arkadium2lb_id_5": {
            "defaultValue": "/subscriptions/81f51f6c-80c0-4fc3-8311-1d6a0763f9c0/resourceGroups/arkadiumcom-frontend3/providers/Microsoft.Network/loadBalancers/arkadium2lb/probes/tcpProbe",
            "type": "String"
        },
        "loadBalancers_arkadium2lb_id_6": {
            "defaultValue": "/subscriptions/81f51f6c-80c0-4fc3-8311-1d6a0763f9c0/resourceGroups/arkadiumcom-frontend3/providers/Microsoft.Network/loadBalancers/arkadium2lb/frontendIPConfigurations/LoadBalancerFrontEnd",
            "type": "String"
        },
        "loadBalancers_arkadium2lb_id_7": {
            "defaultValue": "/subscriptions/81f51f6c-80c0-4fc3-8311-1d6a0763f9c0/resourceGroups/arkadiumcom-frontend3/providers/Microsoft.Network/loadBalancers/arkadium2lb/frontendIPConfigurations/LoadBalancerFrontEnd",
            "type": "String"
        },
        "loadBalancers_arkadium2lb_id_8": {
            "defaultValue": "/subscriptions/81f51f6c-80c0-4fc3-8311-1d6a0763f9c0/resourceGroups/arkadiumcom-frontend3/providers/Microsoft.Network/loadBalancers/arkadium2lb/frontendIPConfigurations/LoadBalancerFrontEnd",
            "type": "String"
        }
    },
    "variables": {},
    "resources": [
        {
            "comments": "Generalized from resource: '/subscriptions/81f51f6c-80c0-4fc3-8311-1d6a0763f9c0/resourceGroups/arkadiumcom-frontend3/providers/Microsoft.Compute/virtualMachineScaleSets/arkadium2'.",
            "type": "Microsoft.Compute/virtualMachineScaleSets",
            "sku": {
                "name": "Standard_F2",
                "tier": "Standard",
                "capacity": 2
            },
            "name": "[parameters('virtualMachineScaleSets_arkadium2_name')]",
            "apiVersion": "2017-12-01",
            "location": "centralus",
            "tags": {
                "Department": "IT",
                "Env": "Dev",
                "Project": "Arkadiumcom"
            },
            "scale": null,
            "properties": {
                "singlePlacementGroup": true,
                "upgradePolicy": {
                    "mode": "Manual",
                    "automaticOSUpgrade": false
                },
                "virtualMachineProfile": {
                    "osProfile": {
                        "computerNamePrefix": "[parameters('virtualMachineScaleSets_arkadium2_name')]",
                        "adminUsername": "toor",
                        "linuxConfiguration": {
                            "disablePasswordAuthentication": false
                        },
                        "secrets": []
                    },
                    "storageProfile": {
                        "osDisk": {
                            "createOption": "FromImage",
                            "caching": "ReadWrite",
                            "managedDisk": {
                                "storageAccountType": "Standard_LRS"
                            }
                        },
                        "imageReference": {
                            "publisher": "Canonical",
                            "offer": "UbuntuServer",
                            "sku": "16.04-LTS",
                            "version": "latest"
                        }
                    },
                    "networkProfile": {
                        "networkInterfaceConfigurations": [
                            {
                                "name": "[concat(parameters('virtualMachineScaleSets_arkadium2_name'),'Nic')]",
                                "properties": {
                                    "primary": true,
                                    "enableAcceleratedNetworking": false,
                                    "dnsSettings": {
                                        "dnsServers": []
                                    },
                                    "enableIPForwarding": false,
                                    "ipConfigurations": [
                                        {
                                            "name": "[concat(parameters('virtualMachineScaleSets_arkadium2_name'),'IpConfig')]",
                                            "properties": {
                                                "subnet": {
                                                    "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_arkadium2Vnet_name'), parameters('subnets_default_name'))]"
                                                },
                                                "privateIPAddressVersion": "IPv4",
                                                "loadBalancerBackendAddressPools": [
                                                    {
                                                        "id": "[concat(resourceId('Microsoft.Network/loadBalancers', parameters('loadBalancers_arkadium2lb_name')), '/backendAddressPools/bepool')]"
                                                    }
                                                ],
                                                "loadBalancerInboundNatPools": [
                                                    {
                                                        "id": "[concat(resourceId('Microsoft.Network/loadBalancers', parameters('loadBalancers_arkadium2lb_name')), '/inboundNatPools/natpool')]"
                                                    }
                                                ]
                                            }
                                        }
                                    ]
                                }
                            }
                        ]
                    },
                    "priority": "Regular"
                },
                "overprovision": true
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_arkadium2Vnet_name'), parameters('subnets_default_name'))]",
                "[resourceId('Microsoft.Network/loadBalancers', parameters('loadBalancers_arkadium2lb_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/81f51f6c-80c0-4fc3-8311-1d6a0763f9c0/resourceGroups/arkadiumcom-frontend3/providers/Microsoft.Network/loadBalancers/arkadium2lb'.",
            "type": "Microsoft.Network/loadBalancers",
            "sku": {
                "name": "Standard",
                "tier": "Regional"
            },
            "name": "[parameters('loadBalancers_arkadium2lb_name')]",
            "apiVersion": "2018-02-01",
            "location": "centralus",
            "tags": {
                "Department": "IT",
                "Env": "Dev",
                "Project": "Arkadiumcom"
            },
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "resourceGuid": "de997099-05a6-4f9d-b758-235ca5c411e6",
                "frontendIPConfigurations": [
                    {
                        "name": "LoadBalancerFrontEnd",
                        "etag": "W/\"7efffe7a-1af9-4f85-9d23-14edca86ffa9\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "privateIPAllocationMethod": "Dynamic",
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_arkadium_name'))]"
                            }
                        }
                    }
                ],
                "backendAddressPools": [
                    {
                        "name": "bepool",
                        "etag": "W/\"7efffe7a-1af9-4f85-9d23-14edca86ffa9\"",
                        "properties": {
                            "provisioningState": "Succeeded"
                        }
                    }
                ],
                "loadBalancingRules": [
                    {
                        "name": "Pool_443",
                        "etag": "W/\"7efffe7a-1af9-4f85-9d23-14edca86ffa9\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "frontendIPConfiguration": {
                                "id": "[parameters('loadBalancers_arkadium2lb_id')]"
                            },
                            "frontendPort": 443,
                            "backendPort": 443,
                            "enableFloatingIP": false,
                            "idleTimeoutInMinutes": 4,
                            "protocol": "Tcp",
                            "loadDistribution": "SourceIP",
                            "disableOutboundSnat": false,
                            "backendAddressPool": {
                                "id": "[parameters('loadBalancers_arkadium2lb_id_1')]"
                            },
                            "probe": {
                                "id": "[parameters('loadBalancers_arkadium2lb_id_2')]"
                            }
                        }
                    },
                    {
                        "name": "Pool_80",
                        "etag": "W/\"7efffe7a-1af9-4f85-9d23-14edca86ffa9\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "frontendIPConfiguration": {
                                "id": "[parameters('loadBalancers_arkadium2lb_id_3')]"
                            },
                            "frontendPort": 80,
                            "backendPort": 80,
                            "enableFloatingIP": false,
                            "idleTimeoutInMinutes": 4,
                            "protocol": "Tcp",
                            "loadDistribution": "SourceIP",
                            "disableOutboundSnat": false,
                            "backendAddressPool": {
                                "id": "[parameters('loadBalancers_arkadium2lb_id_4')]"
                            },
                            "probe": {
                                "id": "[parameters('loadBalancers_arkadium2lb_id_5')]"
                            }
                        }
                    }
                ],
                "probes": [
                    {
                        "name": "tcpProbe",
                        "etag": "W/\"7efffe7a-1af9-4f85-9d23-14edca86ffa9\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "protocol": "Tcp",
                            "port": 80,
                            "intervalInSeconds": 5,
                            "numberOfProbes": 2
                        }
                    },
                    {
                        "name": "TCP_443",
                        "etag": "W/\"7efffe7a-1af9-4f85-9d23-14edca86ffa9\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "protocol": "Tcp",
                            "port": 443,
                            "intervalInSeconds": 5,
                            "numberOfProbes": 2
                        }
                    }
                ],
                "inboundNatRules": [
                    {
                        "name": "natpool.1",
                        "etag": "W/\"7efffe7a-1af9-4f85-9d23-14edca86ffa9\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "frontendIPConfiguration": {
                                "id": "[parameters('loadBalancers_arkadium2lb_id_6')]"
                            },
                            "frontendPort": 50001,
                            "backendPort": 22,
                            "enableFloatingIP": false,
                            "idleTimeoutInMinutes": 4,
                            "protocol": "Tcp"
                        }
                    },
                    {
                        "name": "natpool.2",
                        "etag": "W/\"7efffe7a-1af9-4f85-9d23-14edca86ffa9\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "frontendIPConfiguration": {
                                "id": "[parameters('loadBalancers_arkadium2lb_id_7')]"
                            },
                            "frontendPort": 50002,
                            "backendPort": 22,
                            "enableFloatingIP": false,
                            "idleTimeoutInMinutes": 4,
                            "protocol": "Tcp"
                        }
                    }
                ],
                "inboundNatPools": [
                    {
                        "name": "natpool",
                        "etag": "W/\"7efffe7a-1af9-4f85-9d23-14edca86ffa9\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "frontendPortRangeStart": 50000,
                            "frontendPortRangeEnd": 50119,
                            "backendPort": 22,
                            "protocol": "Tcp",
                            "idleTimeoutInMinutes": 4,
                            "enableFloatingIP": false,
                            "frontendIPConfiguration": {
                                "id": "[parameters('loadBalancers_arkadium2lb_id_8')]"
                            }
                        }
                    }
                ]
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_arkadium_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/81f51f6c-80c0-4fc3-8311-1d6a0763f9c0/resourceGroups/arkadiumcom-frontend3/providers/Microsoft.Network/networkSecurityGroups/arkadium2nsg'.",
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "[parameters('networkSecurityGroups_arkadium2nsg_name')]",
            "apiVersion": "2018-02-01",
            "location": "centralus",
            "tags": {
                "Department": "IT",
                "Env": "Dev",
                "Project": "Arkadiumcom"
            },
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "resourceGuid": "55bc6f99-2851-4ec9-af24-70e1f7782e46",
                "securityRules": [
                    {
                        "name": "allowSSH",
                        "etag": "W/\"fd381b36-cd4b-4ce7-9c0f-15c020f68b89\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow SSH traffic",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "22",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1000,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "allowHTTP",
                        "etag": "W/\"fd381b36-cd4b-4ce7-9c0f-15c020f68b89\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow web traffic",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "80",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1001,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    }
                ],
                "defaultSecurityRules": [
                    {
                        "name": "AllowVnetInBound",
                        "etag": "W/\"fd381b36-cd4b-4ce7-9c0f-15c020f68b89\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow inbound traffic from all VMs in VNET",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 65000,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowAzureLoadBalancerInBound",
                        "etag": "W/\"fd381b36-cd4b-4ce7-9c0f-15c020f68b89\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow inbound traffic from azure load balancer",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "AzureLoadBalancer",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 65001,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "DenyAllInBound",
                        "etag": "W/\"fd381b36-cd4b-4ce7-9c0f-15c020f68b89\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Deny all inbound traffic",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Deny",
                            "priority": 65500,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowVnetOutBound",
                        "etag": "W/\"fd381b36-cd4b-4ce7-9c0f-15c020f68b89\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow outbound traffic from all VMs to all VMs in VNET",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 65000,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowInternetOutBound",
                        "etag": "W/\"fd381b36-cd4b-4ce7-9c0f-15c020f68b89\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow outbound traffic from all VMs to Internet",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "Internet",
                            "access": "Allow",
                            "priority": 65001,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "DenyAllOutBound",
                        "etag": "W/\"fd381b36-cd4b-4ce7-9c0f-15c020f68b89\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Deny all outbound traffic",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Deny",
                            "priority": 65500,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    }
                ]
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/81f51f6c-80c0-4fc3-8311-1d6a0763f9c0/resourceGroups/arkadiumcom-frontend3/providers/Microsoft.Network/publicIPAddresses/arkadium'.",
            "type": "Microsoft.Network/publicIPAddresses",
            "sku": {
                "name": "Standard",
                "tier": "Regional"
            },
            "name": "[parameters('publicIPAddresses_arkadium_name')]",
            "apiVersion": "2018-02-01",
            "location": "centralus",
            "tags": {
                "Department": "IT",
                "Env": "Dev",
                "Project": "Arkadiumcom"
            },
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "resourceGuid": "02fa71cf-2d29-4383-9763-55ba58e9996f",
                "ipAddress": "40.67.187.164",
                "publicIPAddressVersion": "IPv4",
                "publicIPAllocationMethod": "Static",
                "idleTimeoutInMinutes": 4,
                "dnsSettings": {
                    "domainNameLabel": "[concat(parameters('publicIPAddresses_arkadium_name'),'2')]",
                    "fqdn": "[concat(parameters('publicIPAddresses_arkadium_name'),'2.centralus.cloudapp.azure.com')]"
                },
                "ipTags": []
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/81f51f6c-80c0-4fc3-8311-1d6a0763f9c0/resourceGroups/arkadiumcom-frontend3/providers/Microsoft.Network/virtualNetworks/arkadium2Vnet'.",
            "type": "Microsoft.Network/virtualNetworks",
            "name": "[parameters('virtualNetworks_arkadium2Vnet_name')]",
            "apiVersion": "2018-02-01",
            "location": "centralus",
            "tags": {
                "Department": "IT",
                "Env": "Dev",
                "Project": "Arkadiumcom"
            },
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "resourceGuid": "8740fba2-bd71-4ca8-8080-499430e1c2a2",
                "addressSpace": {
                    "addressPrefixes": [
                        "10.0.0.0/16"
                    ]
                },
                "subnets": [
                    {
                        "name": "default",
                        "etag": "W/\"ce83f702-ae21-4bbf-a835-7e0813504114\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "addressPrefix": "10.0.0.0/21",
                            "networkSecurityGroup": {
                                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_arkadium2nsg_name'))]"
                            }
                        }
                    }
                ],
                "virtualNetworkPeerings": [],
                "enableDdosProtection": false,
                "enableVmProtection": false
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_arkadium2nsg_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/81f51f6c-80c0-4fc3-8311-1d6a0763f9c0/resourceGroups/arkadiumcom-frontend3/providers/Microsoft.Network/loadBalancers/arkadium2lb/inboundNatRules/natpool.1'.",
            "type": "Microsoft.Network/loadBalancers/inboundNatRules",
            "name": "[concat(parameters('loadBalancers_arkadium2lb_name'), '/', parameters('inboundNatRules_natpool.1_name'))]",
            "apiVersion": "2018-02-01",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "frontendIPConfiguration": {
                    "id": "[concat(resourceId('Microsoft.Network/loadBalancers', parameters('loadBalancers_arkadium2lb_name')), '/frontendIPConfigurations/LoadBalancerFrontEnd')]"
                },
                "frontendPort": 50001,
                "backendPort": 22,
                "enableFloatingIP": false,
                "idleTimeoutInMinutes": 4,
                "protocol": "Tcp"
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/loadBalancers', parameters('loadBalancers_arkadium2lb_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/81f51f6c-80c0-4fc3-8311-1d6a0763f9c0/resourceGroups/arkadiumcom-frontend3/providers/Microsoft.Network/loadBalancers/arkadium2lb/inboundNatRules/natpool.2'.",
            "type": "Microsoft.Network/loadBalancers/inboundNatRules",
            "name": "[concat(parameters('loadBalancers_arkadium2lb_name'), '/', parameters('inboundNatRules_natpool.2_name'))]",
            "apiVersion": "2018-02-01",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "frontendIPConfiguration": {
                    "id": "[concat(resourceId('Microsoft.Network/loadBalancers', parameters('loadBalancers_arkadium2lb_name')), '/frontendIPConfigurations/LoadBalancerFrontEnd')]"
                },
                "frontendPort": 50002,
                "backendPort": 22,
                "enableFloatingIP": false,
                "idleTimeoutInMinutes": 4,
                "protocol": "Tcp"
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/loadBalancers', parameters('loadBalancers_arkadium2lb_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/81f51f6c-80c0-4fc3-8311-1d6a0763f9c0/resourceGroups/arkadiumcom-frontend3/providers/Microsoft.Network/networkSecurityGroups/arkadium2nsg/securityRules/allowSSH'.",
            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
            "name": "[concat(parameters('networkSecurityGroups_arkadium2nsg_name'), '/', parameters('securityRules_allowSSH_name'))]",
            "apiVersion": "2018-02-01",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "description": "Allow SSH traffic",
                "protocol": "Tcp",
                "sourcePortRange": "*",
                "destinationPortRange": "22",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 1000,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_arkadium2nsg_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/81f51f6c-80c0-4fc3-8311-1d6a0763f9c0/resourceGroups/arkadiumcom-frontend3/providers/Microsoft.Network/networkSecurityGroups/arkadium2nsg/securityRules/allowHTTP'.",
            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
            "name": "[concat(parameters('networkSecurityGroups_arkadium2nsg_name'), '/', parameters('securityRules_allowHTTP_name'))]",
            "apiVersion": "2018-02-01",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "description": "Allow web traffic",
                "protocol": "Tcp",
                "sourcePortRange": "*",
                "destinationPortRange": "80",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 1001,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_arkadium2nsg_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/81f51f6c-80c0-4fc3-8311-1d6a0763f9c0/resourceGroups/arkadiumcom-frontend3/providers/Microsoft.Network/virtualNetworks/arkadium2Vnet/subnets/default'.",
            "type": "Microsoft.Network/virtualNetworks/subnets",
            "name": "[concat(parameters('virtualNetworks_arkadium2Vnet_name'), '/', parameters('subnets_default_name'))]",
            "apiVersion": "2018-02-01",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "addressPrefix": "10.0.0.0/21",
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_arkadium2nsg_name'))]"
                }
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworks_arkadium2Vnet_name'))]",
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_arkadium2nsg_name'))]"
            ]
        }
    ]
}
